--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             <div class="botones">
                 <div class="btn"> <a href="Archivos/Portafolio-FasTicket.pdf" download="Portafolio">Descargar portafolio fasTicket</a> </div>
                 <div class="btn"> <a href="Archivos/Portafolio-AppGym.pdf" download="Portafolio">Descargar portafolio AppGym</a> </div>
+                <div class="btn"> <a href="Archivos/Portafolio-Passdog.pdf" download="Portafolio">Descargar portafolio Passdog</a> </div>
             </div>
 
             <div class="col">
