--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                                 contribuir en proyectos innovadores, colaborando con empresas que aspiren a construir
                                 soluciones de alto impacto.
                             </p>
-                            <a href="#" class="btn"> Descargar CV</a>
+                            <a class="btn" href="Archivos/CV2025.pdf" download="CV">Descargar CV</a> 
+                            <a class="btn" href="Archivos/Coursera Certificado.pdf" download="CV">Descargar certificado</a> 
                         </div>
                         <div class="home-img padd-15">
                             <img src="Images/foto-cv.jpg" alt="">
