--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
                                     <!-- Imagen clickeable que al hacer clic muestra/oculta el contenido -->
-                                    <img src="Images/fasTicket.png" alt="Proyecto 1" class="btn-ver-proyecto"
+                                    <img src="Images/fasticket.png" alt="Proyecto 1" class="btn-ver-proyecto"
                                         data-target="proyecto1">
                                 </div>
                             </div>
