--- a/index.html
+++ b/index.html
@@ -415,7 +415,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="row">
                         <!-- Información del Proyecto 1 (Inicialmente oculta) -->
                         <div class="proyecto-detalle" id="proyecto1">
@@ -936,6 +935,7 @@
                                     Proyecto</a>
                             </div>
                     </div>
+                </div>  
             </section>
             <!--  portafolio section end -->
 
