--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                                 contribuir en proyectos innovadores, colaborando con empresas que aspiren a construir
                                 soluciones de alto impacto.
                             </p>
-                            <a class="btn" href="Archivos/CV2025.pdf" download="CV">Descargar CV</a> 
-                            <a class="btn" href="Archivos/Coursera Certificado.pdf" download="CV">Descargar certificado</a> 
+                            <a class="btn" href="Archivos/CV2025.pdf" download="CV">Descargar CV</a>
+                            <a class="btn" href="Archivos/Coursera Certificado.pdf" download="CV">Descargar
+                                certificado</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="Images/foto-cv.jpg" alt="">
@@ -435,7 +436,8 @@
                                             Este estudio busca conocer qué tan fácil o difícil es realizar una compra
                                             para
                                             un
-                                            evento, para saber cuáles son las primeras dificultades.</p>
+                                            evento, para saber cuáles son las primeras dificultades.
+                                        </p>
                                     </div>
                                     <div class="info">
                                         <h3>Responsabilidades</h3>
@@ -449,7 +451,8 @@
                                         <p>Los sitios web de venta de entradas son un poco confusos e incluso te obligan
                                             a
                                             hacer
-                                            la llamada cola virtual.</p>
+                                            la llamada cola virtual.
+                                        </p>
                                     </div>
                                     <div class="info">
                                         <h3>Meta</h3>
@@ -461,13 +464,14 @@
                                     </div>
                                     <div class="info">
                                         <h3>Rol</h3>
-                                        <p>Mi rol fue investigador y diseñador de interfaz UX.</p>
+                                        <p>Mi rol fue investigador y diseñador de interfaz UX.
+                                        </p>
                                     </div>
                                     <div class="info">
                                         <h3>Duración del proyecto</h3>
-                                        <p>Mayo 2023-Enero 2024</p>
+                                        <p>Mayo 2023-Enero 2024
+                                        </p>
                                     </div>
-
                                 </div>
                                 <div class="info-portfolio">
                                     <h2>Proceso del diseño</h2>
@@ -479,14 +483,7 @@
                                         enfocarme aún en lo visual.
                                         Fue una herramienta clave para estructurar las funciones esenciales y validar
                                         las primeras ideas con los usuarios.</p>
-                                    <div class="row padd-15">
-                                        <img src="Images/portfolio1.png" alt="Pantalla 1" class="img-portfolio">
-                                        <img src="Images/portfolio1.png" alt="Pantalla 2" class="img-portfolio">
-                                        <img src="Images/portfolio1.png" alt="Pantalla 3" class="img-portfolio">
-                                        <img src="Images/portfolio1.png" alt="Pantalla 4" class="img-portfolio">
-                                        <img src="Images/portfolio1.png" alt="Pantalla 5" class="img-portfolio">
-                                        <img src="Images/portfolio1.png" alt="Pantalla 6" class="img-portfolio">
-                                    </div>
+                                   <br>
                                     <h3>Wireframes digitales</h3>
                                     <p>A partir de los bocetos en papel, creé versiones digitales utilizando Figma.
                                         Esto facilitó la visualización del recorrido del usuario y permitió compartir el
@@ -528,6 +525,7 @@
                                         <img src="Images/Select place.png" alt="Pantalla 5" class="img-low">
                                         <img src="Images/Confirmation.png" alt="Pantalla 6" class="img-low">
                                     </div>
+
                                 </div>
 
                                 <div class="info-portfolio">
@@ -995,6 +993,13 @@
     <!--  style switcher end -->
     <!--  js files -->
     <script src="./menu.js"> </script>
+
+    <!-- POPUP DE IMAGEN -->
+<div id="popup" class="popup" onclick="closePopup()">
+  <span class="popup-close">&times;</span>
+  <img id="popup-img" class="popup-content" alt="Vista ampliada">
+</div>
+
 </body>
 
 </html>
