--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
                                 contribuir en proyectos innovadores, colaborando con empresas que aspiren a construir
                                 soluciones de alto impacto.
                             </p>
-                            <a class="btn" href="Archivos/CV2025.pdf" download="CV">Descargar CV</a>
-                            <a class="btn" href="Archivos/Coursera Certificado.pdf" download="CV">Descargar
-                                certificado</a>
+                            <div class="btns-home">
+                                <a class="btn" href="Archivos/CV2025.pdf" download="CV">Descargar CV</a>
+                                <a class="btn" href="Archivos/Coursera Certificado.pdf" download="Certificado">Descargar
+                                    certificado</a>
+                            </div>
                         </div>
                         <div class="home-img padd-15">
                             <img src="Images/foto-cv.jpg" alt="">
@@ -483,7 +485,7 @@
                                         enfocarme aún en lo visual.
                                         Fue una herramienta clave para estructurar las funciones esenciales y validar
                                         las primeras ideas con los usuarios.</p>
-                                   <br>
+                                    <br>
                                     <h3>Wireframes digitales</h3>
                                     <p>A partir de los bocetos en papel, creé versiones digitales utilizando Figma.
                                         Esto facilitó la visualización del recorrido del usuario y permitió compartir el
@@ -988,10 +990,10 @@
     <script src="./menu.js"> </script>
 
     <!-- POPUP DE IMAGEN -->
-<div id="popup" class="popup" onclick="closePopup()">
-  <span class="popup-close">&times;</span>
-  <img id="popup-img" class="popup-content" alt="Vista ampliada">
-</div>
+    <div id="popup" class="popup" onclick="closePopup()">
+        <span class="popup-close">&times;</span>
+        <img id="popup-img" class="popup-content" alt="Vista ampliada">
+    </div>
 
 </body>
 
